Fix #2346 "FB: PDF Upload dialog is too narrow"

--- a/src/resources/forms/orbeon/builder/resources/form-builder.less
+++ b/src/resources/forms/orbeon/builder/resources/form-builder.less
@@ -361,7 +361,7 @@ body {
     }
 
     // Other dialogs
-    #fb-add-language-dialog {
+    #fb-add-language-dialog, #fb-pdf-upload-dialog {
         width: 400px;
     }
 
